fixed #1901 fixed dark mode colors for validation messages

--- a/admin/themes/roma/css/components/general.css
+++ b/admin/themes/roma/css/components/general.css
@@ -194,8 +194,8 @@ or (generated by selectize.js)
 }
 
 .info-message {
-  background-color:  #0a0;
-  color: #c2f5c2;
+  background-color:  #50a48f;
+  color: #a9f6e3;
 }
 
 .info-warning {
